<resources>
    <string name="app_name">SJMIS (H)</string>
    <string name="default_bangla_font">android2.ttf</string>
    <string name="app_version">App Version</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="registers_home_toolbar">Registers</string>
    <string name="server_sync_toolbar">Data Sync to Server</string>
    <string name="data_summery_toolbar">Data Summery</string>
    <string name="my_account">My Account</string>
    <string name="internet_usages">Internet Usages</string>
    <string name="location_settings">Location Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="data_backup">Data Backup</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="old_slum">Old Slum Info</string>
    <string name="reserve_id">Reserved Id</string>
    <string name="logout">Logout</string>
    <string name="data_backup_message">Want to e-mail data backup?</string>
    <string name="logout_warning_message">Want to Logout?</string>
    <string name="something_wrong">Somethings Wrong</string>
    <string name="logging_out">Logging Out...</string>
    <string name="great">Great</string>
    <string name="logout_success">You Logged out successfully</string>
    <string name="thanks">Thanks</string>
    <string name="mnchn">MNCHN</string>
    <string name="shn">SHN</string>
    <string name="registration">Registration</string>
    <string name="new_born">Newborn (0-2 Months)</string>
    <string name="children">Children (2-59 Months)</string>
    <string name="moni_mix">Monimix Followup</string>
    <string name="iron_calcium">Iron Calcium Followup</string>
    <string name="vaccine">Vaccine Followup</string>
    <string name="community">Community</string>
    <string name="deworming">Deworming</string>
    <string name="session">Session</string>
    <string name="rc_session">RC Session</string>
    <string name="court_yard">Courtyard</string>
    <string name="gmp">GMP</string>
    <string name="ad">Adolescent</string>
    <string name="anc">ANC</string>
    <string name="pnc">PNC</string>
    <string name="not_identified">Not identified</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ben_selection">Beneficiary Selection</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="disqualified_for_service">is disqualified for service</string>
    <string name="qualified_for_service">is qualified for service</string>
    <string name="want_to_give_service">Want to give Service?</string>
    <string name="want_to_see_registration">Want to see Registration Data?</string>
    <string name="house_no">House No</string>
    <string name="no_data">No Data</string>
    <string name="no_ben_selected">No Beneficiary selected</string>
    <string name="ben_list">Beneficiary List</string>
    <string name="userId">User ID</string>
    <string name="login_id">Login ID</string>
    <string name="designation">Designation</string>
    <string name="organization">Organization</string>
    <string name="no_location">No Location Provider is Available</string>
    <string name="want_to_sync">Want to Sync Data to Server?</string>
    <string name="sync_syncing_text">Data Syncing...</string>
    <string name="sync_success_text">Data Synced Successfully</string>
    <string name="sync_partial_text">Data Syncing partially success</string>
    <string name="sync_finished_text">Data Syncing completed</string>
    <string name="sync_failed_text">Data Syncing failed</string>
    <string name="geo_fetch_warning_text">Want to download location?</string>
    <string name="crash_sending_stop">Application Error syncing completed</string>
    <string name="geo_missing">Geo is missing, please download it from server first!</string>
    <string name="location">Location</string>
    <string name="geo_code">Code</string>
    <string name="geo_name">Location Name</string>
    <string name="enter_meeting_place">Enter Meeting place</string>
    <string name="download_registration_data">Please at first download Registration data</string>
    <string name="want_to_download_registration_data">Want to download Registration data?</string>
    <string name="another_service_running">Another process is running</string>
    <string name="db_exported">Your Database has been successfully exported as separate file</string>
    <string name="sorry">Sorry!</string>
    <string name="ben_already_exist">Ben Already Exist</string>
    <string name="alert_date_exist">Date Already Exist</string>
    <string name="login_success">Your Login Success</string>
    <string name="login_failed">Your login failed</string>
    <string name="validation_error">Wrong Information</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="exit_message">Want to exit from App?</string>
    <string name="logging_in">Login...</string>
    <string name="getting_ready">Getting Ready...</string>
    <string name="crash_message">Application has faced temporary Error</string>
    <string name="crash">Application Error</string>
    <string name="permission_failed">Your Permission getting failed!</string>
    <string name="permission_message_twice">To allow permission please go to device settings page</string>
    <string name="internet_usages_limit_label">Usages against total limit of the Month</string>
    <string name="internet_usages_today">Internet data used today</string>
    <string name="internet_usages_1_15">Data (MB) used from 1st to 15th day Report of Selected Month</string>
    <string name="internet_usages_16_30">Data (MB) used from 16th to 30th day Report of Selected Month</string>
    <string name="internet_usages_16_29">Data (MB) used from 16th to 29th day Report of Selected Month</string>
    <string name="internet_usages_16_31">Data (MB) used from 16th to 31st day Report of Selected Month</string>
    <string name="id_download_warning">Want to download ID?</string>
    <string name="slum_download_warning">Want to download Old Slum Info?</string>
    <string name="slum_downloaded">Slum Information downloaded</string>
    <string name="catchment_area_download_success">Old Slum info downloaded successfully</string>
    <string name="slum_download_again">Download old slum info again</string>
    <string name="slum_download">Download old slum info</string>
    <string name="unused_reserved_id">You have unused reserved ID</string>
    <string name="benIdList">Reserved Beneficiary ID</string>
    <string name="hhIdList">Reserved Household ID</string>
    <string name="new_id">Download new ID</string>
    <string name="send_to_server">Send To Server</string>
    <string name="sync_50_by_50">Each time 50 Data will sync to server</string>
    <string name="no_internet_title">Network Error!</string>
    <string name="no_internet_message">Please Enable Internet Connection</string>
    <string name="delete">Delete</string>
    <string name="do_select">Select</string>
    <string name="do_cancel">Cancel</string>
    <string name="gps_track_failed">Wait till getting correct location</string>
    <string name="no_gps_title">Location Service Error!</string>
    <string name="no_gps_message">Please Enable Location Service</string>
    <string name="select_correct_data">Select correct data</string>
    <string name="letter_require">Letter Required</string>
    <string name="minimum">Minimum</string>
    <string name="input_home_no">Enter Home No</string>
    <string name="toilet_exist">Already exist, Select another Number</string>
    <string name="visit_no">Visit No</string>
    <string name="last_update">Last update</string>
    <string name="meeting_place">Meeting place</string>
    <string name="start_date">Start Date</string>
    <string name="meeting_no">Meeting No</string>
    <string name="date">Date</string>
    <string name="subject">Subject</string>
    <string name="attendance">Attendance</string>
    <string name="message_no">Message No</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="height_cm">Height (Cm)</string>
    <string name="muac_cm">MUAC (Cm)</string>
    <string name="home_no">Home No</string>
    <string name="home_name">Home Name</string>
    <string name="household_id">Household ID</string>
    <string name="digit_hint">Input Number</string>
    <string name="name_hint">Input Name</string>
    <string name="commodities">Commodities</string>
    <string name="house_condition">House Condition</string>
    <string name="domestic_animals">Domestic Animals</string>
    <string name="data_provider_name">Data Provider</string>
    <string name="data_collection_date">Data collection Date</string>
    <string name="family_head_name">Head of Family</string>
    <string name="family_head_prof">Head of Family Profession</string>
    <string name="father_husband">Father / Husband</string>
    <string name="family_monthly_income">Family monthly income</string>
    <string name="family_designation">Family designation</string>
    <string name="family_language">Family Language</string>
    <string name="family_total_member">Number of member</string>
    <string name="household_service">Household Services</string>
    <string name="cultivate_land">Land of cultivation</string>
    <string name="own">Own</string>
    <string name="sublease">Sub-lease</string>
    <string name="pawned">Pawned</string>
    <string name="resident">Resident</string>
    <string name="resident_style">Living Vetter Type</string>
    <string name="family_member_info">Family Member Information</string>
    <string name="no_data_message">No Data</string>
    <string name="unique_id">Unique ID</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="family_head_relation">Relation with Head</string>
    <string name="guessed">Guessed</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="gender">Gender</string>
    <string name="is_pregnant">Is Preganant</string>
    <string name="see_info">See Info</string>
    <string name="marital_status">Marital status</string>
    <string name="has_birth_id">Has Birth Certificate</string>
    <string name="has_autism">Has Autism</string>
    <string name="educational_qualification">Educational Qualification</string>
    <string name="go_school">Go to School</string>
    <string name="school_type">School Type</string>
    <string name="school_name">School Name</string>
    <string name="child_labour">Is Child Labour</string>
    <string name="icdp_service_taken">Take ICDP Service</string>
    <string name="taken_service_name">Taken services Name</string>
    <string name="service_org_name">Service providing Org</string>
    <string name="service_org_other_name">If Other Org</string>
    <string name="phone_no">Mobile No</string>
    <string name="active_mobile">Is Mobile Active</string>
    <string name="want_mobile_sms">Want mobile SMS</string>
    <string name="sponsor_enrolled">Sponsor Enrolled</string>
    <string name="other_ngo_engaged">Other NGO engagement</string>
    <string name="profession">Profession</string>
    <string name="sponsor_project_code">Sponsor Project Codes</string>
    <string name="settings_district">District</string>
    <string name="settings_city">City Corporation</string>
    <string name="settings_city_ward">Ward</string>
    <string name="settings_city_para">Road/Colony</string>
    <string name="settings_resource_center">Resource Center</string>
    <string name="settings_save_all_geo">Save</string>
</resources>