<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/form_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/mGeoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_margin="16dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/DistrictLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_district"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/District"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_bg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/UpazilaLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_city"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/Upazila"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_bg" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/UnionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_city_ward"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/Union"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_bg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/VillageLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/settings_city_para"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/Village"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_bg" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/RcSchoolLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/settings_resource_center"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/RcNSchool"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_bg" />

                </LinearLayout>

            </LinearLayout>

            <!-- save Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mSaveAllGeoBtn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/settings_save_all_geo"
                android:textColor="@color/md_blue_900" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    
</LinearLayout>