<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="activities.InternetDataUsagesActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@color/md_white_1000"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight=".8"
                android:gravity="center_horizontal|bottom"
                android:layout_gravity="bottom"
                android:background="@color/md_grey_50"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="5dp"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.9">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MB"
                        android:textSize="12sp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:layout_centerInParent="true"
                        android:paddingTop="40dp"
                        android:textColor="@color/black"/>

                    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                        android:id="@+id/today_data"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_centerInParent="true"
                        app:dotColor="@color/md_blue_grey_300"
                        app:dotWidth="20dp"
                        app:drawDot="true"
                        app:progressBackgroundColor="#efefefef"
                        app:progressColor="@color/colorPrimary"
                        app:progressStrokeWidth="8dp"
                        app:textColor="@color/black"
                        app:textSize="18sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal|top"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internet_usages_limit_label"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15 MB"
                            android:textSize="18sp"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/internet_usages_today"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1.2"
                android:background="@color/md_grey_50"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="5dp"
                android:weightSum="1.8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight=".5"
                        android:background="@color/md_grey_400"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:weightSum="8"
                        android:background="@drawable/gradiant_border">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/prev_part_month"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:clickable="true"
                                android:layout_gravity="center"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:background="@drawable/ic_action_left_selected"/>

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:background="@color/md_grey_400"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/month_picker"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:drawableLeft="@drawable/ic_action_calender"
                                android:drawableRight="@drawable/ic_action_down_spinner"
                                android:text="September"
                                android:layout_gravity="center"
                                android:drawablePadding="8dp"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:textColor="@color/colorPrimary"/>

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:background="@color/md_grey_400"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/next_part_month"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:clickable="true"
                                android:layout_gravity="center"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:background="@drawable/ic_action_chevron_right"/>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight=".5"
                        android:background="@color/md_grey_400"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.3">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight=".2"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/bar_bottom_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/internet_usages_1_15"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
